--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <html>
   <body>
     <div id="app"></div>
+
+    <!-- Loads the core React library -->
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+
+    <!-- Loads react-dom scripts for DOM-specific methods -->
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    
+    <!-- Loads vanilla.js script -->
     <script type="text/javascript">
       const app = document.getElementById('app');
       
