--- a/index.html
+++ b/index.html
@@ -7,23 +7,13 @@
 
     <!-- Loads react-dom scripts for DOM-specific methods -->
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    
-    <!-- Loads vanilla.js script -->
-    <script type="text/javascript">
+   
+    <!-- Refactor JS code --> 
+    <script>
       const app = document.getElementById('app');
-      
-      // Create a new H1 element
-      const header = document.createElement('h1');
-
-      // Create a new text node for the H1 element
-      const text = 'Develop. Preview. Ship.';
-      const headerContent = document.createTextNode(text);
-
-      // Append the text to the H1 element
-      header.appendChild(headerContent);
-
-      // Place the H1 element inside the div
-      app.appendChild(header);
+      const root = ReactDOM.createRoot(app);
+      root.render(<h1>Develop. Preview. Ship.</h1>);
     </script>
+
   </body>
 </html>
