--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <!-- Loads react-dom scripts for DOM-specific methods -->
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-   
-    <!-- Refactor JS code --> 
-    <script>
+    <!-- Babel Script -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/jsx">
       const app = document.getElementById('app');
       const root = ReactDOM.createRoot(app);
       root.render(<h1>Develop. Preview. Ship.</h1>);
