update index.html return component to render UI w/ JSX

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/jsx">
       const app = document.getElementById('app');
+      
+      // reate header function
+      function header() {
+         return (<h1>Develop. Preview. Ship.</h1>) 
+      }
       const root = ReactDOM.createRoot(app);
       root.render(<h1>Develop. Preview. Ship.</h1>);
     </script>
